--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body{
 	float: left;
 }
 .col2{
-	width: 350px;
+	width: 80%;
 	transition: all 1s ease;
 }
 
@@ -30,4 +30,18 @@ div.col{
 .option{
 	background-color: white;
 	text-align:center;
+
+}
+
+@media screen and (max-width:440px)
+{
+	.col-sm-6
+	{
+		height: 28vh;
 	}
+
+	.col
+	{
+		height: 94%;
+	}
+}
