--- a/style.css
+++ b/style.css
@@ -17,6 +17,11 @@ h1{
 
 body{
 	background-color: #232323;
+	height: 100vh;
+	width: 100vw;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
 }
 .col{
 	width: 80%;
@@ -35,7 +40,15 @@ div.col{
 .option{
 	background-color: white;
 	text-align:center;
+	position: relative;
+	transform: translate3d(-100% , 0 ,0);
+}
 
+.slide
+{
+	transform: translate3d(0, 0, 0);
+	transition: all 0.8s ease;
+	transition-delay: 0.8s;
 }
 
 .row
@@ -48,7 +61,7 @@ div.col{
 {
 	transform: translate3d(0, 0, 0);
 	transition: all 0.8s ease;
-	transition-delay: 0.6s;
+	transition-delay: 1.4s;
 }
 @media screen and (max-width:440px)
 {
